[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/players.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/ui.png" type="Texture" id=3]
[ext_resource path="res://Scripts/RotateBtnArea2D.gd" type="Script" id=4]
[ext_resource path="res://Assets/Particles/Round.png" type="Texture" id=5]
[ext_resource path="res://Scenes/RotateParticles.tscn" type="PackedScene" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.00301205, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.111446, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.65664, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00323625, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=3]
radius = 272.984

[node name="Player" type="Node2D" groups=[
"Players",
]]
z_index = 1000
z_as_relative = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="MoveParticles" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
position = Vector2( -170.614, 0 )
amount = 16
lifetime = 0.5
preprocess = 0.5
lifetime_randomness = 0.2
local_coords = false
texture = ExtResource( 5 )
gravity = Vector2( 0, 0 )
scale_amount = 0.2
scale_amount_random = 0.4
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )
hue_variation = 1.0
hue_variation_random = 0.2

[node name="RotateParticles" parent="Sprite" instance=ExtResource( 6 )]

[node name="Tween" type="Tween" parent="."]

[node name="StepCounter" type="Node2D" parent="."]
scale = Vector2( 1.2, 1.2 )

[node name="Sprite" type="Sprite" parent="StepCounter"]
texture = ExtResource( 3 )
hframes = 8
vframes = 2

[node name="BackpackIcon" type="Sprite" parent="StepCounter"]
position = Vector2( 0, 291.356 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
hframes = 8
vframes = 2
frame = 14

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="FeedbackTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
[connection signal="timeout" from="FeedbackTimer" to="." method="_on_FeedbackTimer_timeout"]
